# hal_realtek_mainline

./: CMakeLists.txt
ameba/: Kconfig
bee/drivers/: CMakeLists.txt  Kconfig
bee/drivers/adc/: CMakeLists.txt  Kconfig
bee/drivers/adc/inc/: rtl_adc.h
bee/drivers/adc/src/rtl8752h/: CMakeLists.txt
bee/drivers/bluetooth/: Kconfig
bee/drivers/bluetooth/src/: CMakeLists.txt
bee/drivers/can/: CMakeLists.txt  Kconfig
bee/drivers/can/inc/: rtl_can.h
bee/drivers/can/src/device/: CMakeLists.txt
bee/drivers/clock/inc/rtl8752h/: clock_manager.h
bee/drivers/codec/: CMakeLists.txt  Kconfig
bee/drivers/dma/: CMakeLists.txt  Kconfig
bee/drivers/dma/inc/: rtl_dma.h
bee/drivers/gpio/: CMakeLists.txt  Kconfig
bee/drivers/gpio/inc/: rtl_gpio.h
bee/drivers/i2c/: CMakeLists.txt  Kconfig
bee/drivers/i2c/inc/: rtl_i2c.h
bee/drivers/i2s/: CMakeLists.txt  Kconfig
bee/drivers/i2s/inc/: rtl_i2s.h
bee/drivers/ir/: CMakeLists.txt  Kconfig
bee/drivers/ir/inc/: rtl_ir.h
bee/drivers/irq/: CMakeLists.txt  Kconfig
bee/drivers/irq/inc/: rtl_nvic.h
bee/drivers/keyscan/: CMakeLists.txt  Kconfig
bee/drivers/keyscan/inc/: rtl_keyscan.h
bee/drivers/mac_802154/: Kconfig
bee/drivers/pinmux/: CMakeLists.txt  Kconfig
bee/drivers/pinmux/inc/: CMakeLists.txt  rtl_pinmux.h  rtl_wakeup.h
bee/drivers/pwm/: CMakeLists.txt  Kconfig
bee/drivers/qdec/: CMakeLists.txt  Kconfig
bee/drivers/qdec/inc/: rtl_lpqdec.h
bee/drivers/rcc/: CMakeLists.txt  Kconfig
bee/drivers/rcc/inc/: rtl_rcc.h
bee/drivers/rtc/: CMakeLists.txt  Kconfig
bee/drivers/rtc/inc/: rtl_grtc.h  rtl_rtc.h
bee/drivers/sdhc/: CMakeLists.txt  Kconfig
bee/drivers/sdhc/src/: CMakeLists.txt
bee/drivers/spi/: CMakeLists.txt  Kconfig
bee/drivers/spi/inc/: rtl_spi.h
bee/drivers/timer/: CMakeLists.txt  Kconfig
bee/drivers/timer/inc/: rtl_timer.h
bee/drivers/uart/: CMakeLists.txt  Kconfig
bee/drivers/uart/inc/: rtl_uart.h
bee/drivers/usb/: CMakeLists.txt  Kconfig
bee/drivers/usb/usb_hal/: CMakeLists.txt
(+282 files in other folders)
